Fixed token image alignment and with some other fixes

--- a/styles/nft-card.module.css
+++ b/styles/nft-card.module.css
@@ -1,5 +1,7 @@
 .nftCard {
-  @apply block bg-dark-blue-card w-80 p-6 text-lg rounded-xl shadow-2xl;
+  @apply block bg-dark-blue-card w-80 p-6 text-lg rounded-xl shadow-2xl select-none;
+
+  -webkit-tap-highlight-color: transparent;
 }
 
 .nftCard > *:not(:last-child) {
